Fix buttons display on small devices

--- a/blocks/intro.css
+++ b/blocks/intro.css
@@ -67,7 +67,7 @@
 
 @media screen and (max-width: 720px) {
   .intro {
-    max-width: 288px;
+    margin: 50px 16px 0;
   }
 
   .intro__title {
