--- a/blocks/place.css
+++ b/blocks/place.css
@@ -193,8 +193,8 @@
   }
 
   .place__button {
-    margin: 0;
-    width: 100%;
+    margin: 0 auto;
+    max-width: 288px;
   }
 
   .place__link {
